--- a/ring-builder/index.html
+++ b/ring-builder/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <div id="loading-screen">
+  <!-- <div id="loading-screen">
     <div class="spinner"></div>
     <p class="loader-text">LOADING VIEWER...</p>
-  </div>
+  </div> -->
 
   <div id="error-message" style="display: none">
     <h2>Ring Not Found</h2>
