--- a/ring-builder/index.html
+++ b/ring-builder/index.html
@@ -17,6 +17,15 @@
       <p class="loader-text">LOADING VIEWER...</p>
     </div>
 
+    <!-- Dynamic Model Loader (Top Center) -->
+    <div id="model-loader" class="hidden">
+      <div class="dot-loader">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+
     <div id="error-message" style="display: none">
       <h2>Ring Not Found</h2>
       <p>Please check your configuration.</p>
